# turboquant-compressor

./: .gitignore  CHANGELOG.md  INSTALL.md  NOTICE  README.md  RELEASE_v4.5.2.md  RELEASE_v4.6.1.md  bd_turboquant_integration.py  jest.config.js  mcp-conformance-transcript.json  package-lock.json  package.json  termux-bootstrap.sh  tsconfig.build.json  tsconfig.json
docs/: ADB_WORKFLOW.md  AGENT_DONOR_CORPUS_2026-05-22.md  ANDROID_EVIDENCE_PACK_20260515_RECOVERY_VALUE.md  ANDROID_LINKER_NAMESPACE_OPENCL.md  ARCHITECTURE.md  CLAUDE_CODE_COST_OPTIMIZATION.md  CLAUDE_CODE_SETUP.md  CORPUS_VERIFICATION_RULE.md  COST_MODEL_BOUNDARY.md  CPP_MIGRATION_ROADMAP.md  CXX_MIGRATION_BASELINE.md  DONOR_FILE_TO_FILE_SCAN.md  DONOR_REPO_REVIEW.md  DRIVER_DEBUG_FORENSICS_CONTRACT.json  DRIVER_DEBUG_FORENSICS_PLAYBOOK.md  DRIVER_SOURCE_AUDIT.md  DRIVER_STACK_RECOVERY.md  EXPORT_CHECKLIST.md  EXPORT_VERDICT.md  FORMAT.md  FORMAT_V3_PLAN.md  FRONTIER_DONOR_MODEL_2026-05-22.md  LICENSE_STRATEGY.md  MCP_HOST_MATRIX.md  MCP_SDK_VERSION_POLICY.md  MESA_DRIVER_FILE_TO_FILE_MAP.md  MESA_STACK_FORENSICS_MODULE_2026-05-21.md  MESA_TQ_FORENSIC_AUDIT_2026-05-21.md  OPENCL_BENCHMARK_POLICY.md  OPEN_TESTING.md  OPTIMIZATION_ORDER.md  P1_CONTROLLED_INTERCEPT_THERMAL_LANE_2026-05-22.md  P1_P3_FRONTIER_QUEUE_2026-05-22.md  P1_TOOLING_CI_CONTRACT_2026-05-22.md  P2_DISTILLATION_FOR_QUANTIZATION_CONTRACT_2026-05-22.md  P2_FULL_QAT_TRAINING_LOOP_2026-05-22.md  P2_GRADIENT_VERIFIED_LSQ_OPTIMIZER_MODULE_2026-05-22.md  P2_HYBRID_CPU_GPU_TRAINING_RUNTIME_2026-05-22.md  (+32 more)
native/adreno/: CMakeLists.txt
native/adreno/include/: tq_adreno.h
native/adreno/src/: tq_adreno_cli.cpp  tq_backend_registry.cpp  tq_benchmark.cpp  tq_cpu_scalar_fused_attention.cpp  tq_cpu_scalar_mse_score.cpp  tq_cpu_scalar_value_dequant.cpp  tq_neon_fused_attention.cpp  tq_neon_mse_score.cpp  tq_neon_value_dequant.cpp
native/core/: CMakeLists.txt
native/core/include/: tq_base64.h  tq_benchmark.h  tq_beta_sphere.h  tq_calibration.h  tq_context_pack.h  tq_core.h  tq_distillation.h  tq_kv_cache.h  tq_limits.h  tq_lsq_optimizer.h  tq_oracle.h  tq_prng.h  tq_product_quantizer.h  tq_qat_training.h  tq_quality.h
native/core/src/: main_test.cpp  tq_base64.cpp  tq_benchmark.cpp  tq_beta_sphere.cpp  tq_calibration.cpp  tq_cli.cpp  tq_compress.cpp  tq_context_pack.cpp  tq_distillation.cpp  tq_format.cpp  tq_kernel_inline.h  tq_kv_cache.cpp  tq_limits.cpp  tq_lsq_optimizer.cpp  tq_oracle.cpp  tq_prng.cpp  tq_product_quantizer.cpp  tq_qat_training.cpp  tq_quality.cpp  tq_search.cpp
native/core/test/: CMakeLists.txt  test_full_benchmark.cpp  test_qat.cpp  test_tq_core.cpp
native/gpu/: CMakeLists.txt  README.md
native/gpu/include/: tq_gpu_pipeline.h
native/gpu/src/: test_gpu_pipeline.cpp  tq_gpu_pipeline.cpp
native/kernel/: CMakeLists.txt  README.md
native/kernel/include/: tq_qjl_hadamard.h  tq_qjl_kernel.h  tq_quantizer_kernel.h  tq_rotation_kernel.h
native/kernel/src/: kernel_bench.cpp  test_hadamard_qjl.cpp  test_kernel.cpp  tq_qjl_hadamard.cpp  tq_qjl_kernel.cpp  tq_quantizer_kernel.cpp  tq_rotation_kernel.cpp
native/opencl/: ARCHITECTURE.md  CMakeLists.txt  cl_kernel_test.c  cl_probe.c
native/opencl-intercept/: CMakeLists.txt  README.md
native/opencl-intercept/include/: tq_intercept.h
native/opencl-intercept/src/: intercept_cli.cpp  tq_intercept_api.cpp  tq_intercept_core.cpp  tq_intercept_kernel.cpp  tq_intercept_memory.cpp  tq_intercept_profiler.cpp
native/opencl-intercept/test/: test_intercept.cpp
native/opencl/driver-pack/: build_mesa.sh  env.sh  manifest.json  pack_driver.sh  tq_rusticl_loader.sh
native/opencl/driver-pack/kernels/: tq_attention_apply_values.cl  tq_attention_logits.cl  tq_mse_score.cl  tq_qjl_score.cl  tq_value_dequant.cl
native/opencl/driver-pack/layer1-compute/: libRusticlOpenCL.so.1
native/opencl/driver-pack/meta/: manifest.json
native/opencl/driver-pack/patches/: 0001-pipe_loader_kgsl-compute-priority-boost.patch  0002-android_stub-real-cutils-binding.patch  0003-turnip-expose-all-extensions-force-wave128.patch
native/opencl/driver-root/: env.sh
native/opencl/driver-root/kernels/: tq_attention_apply_values.cl  tq_fused_attention.cl  tq_fused_attention_tiled.cl  tq_fused_attention_v2.cl  tq_fused_attention_v3_fp16.cl  tq_fused_attention_v5_fp16.cl  tq_mse_score.cl  tq_value_dequant.cl
native/opencl/driver-root/layer2-vulkan/: freedreno_icd.aarch64.json
native/opencl/driver-root/meta/: dependencies.txt  manifest.json
native/opencl/include/: tq_autotuner.h  tq_buffer.h  tq_cl_vk_interop.h  tq_driver_loader.h  tq_driver_manifest.h  tq_gpu_profile.h  tq_inference_runtime.h  tq_inference_runtime_gpu.h  tq_kernel_cache.h  tq_kernel_tune.h  tq_opencl.h  tq_opencl_errors.h  tq_opencl_kernel_manager.h  tq_opencl_kernels.h  tq_opencl_memory.h  tq_opencl_probe.h  tq_opencl_types.h  tq_repo_paths.h  tq_runtime_scheduler.h  tq_trace.h  tq_vk_probe.h
native/opencl/kernels/: tq_attention_apply_values.cl  tq_attention_logits.cl  tq_fused_attention_v4_fp16.cl  tq_fused_attention_v5_fp16.cl  tq_mse_score.cl  tq_qjl_score.cl  tq_value_dequant.cl
native/opencl/src/: tq_autotuner.cpp  tq_buffer.cpp  tq_cl_vk_interop.cpp  tq_driver_loader.cpp  tq_driver_manifest.cpp  tq_gpu_profile.cpp  tq_inference_runtime.cpp  tq_inference_runtime_gpu.cpp  tq_kernel_cache.cpp  tq_kernel_tune.cpp  tq_opencl_benchmark.cpp  tq_opencl_cli.cpp  tq_opencl_context.cpp  tq_opencl_fused_attention.cpp  tq_opencl_fused_attention_tiled.cpp  tq_opencl_kernel_manager.cpp  tq_opencl_memory.cpp  tq_opencl_mse_score.cpp  tq_opencl_probe.cpp  tq_opencl_program.cpp  tq_opencl_qjl_score.cpp  tq_opencl_value_dequant.cpp  tq_repo_paths.cpp  tq_runtime_scheduler.cpp  tq_vk_probe.cpp
native/opencl/test/: test_fused_attention_parity.cpp  test_kernel_cache.cpp  test_mse_parity.cpp  test_qjl_parity.cpp  test_value_dequant_parity.cpp
native/opencl/tools/: compile_spirv.sh
native/spirv/: CMakeLists.txt  README.md
native/spirv/include/: tq_spirv_loader.h
native/spirv/src/: tq_spirv_loader.cpp
native/spirv/tools/: compile_spirv.sh
(+352 files in other folders)
